# Verox

./: README.md
verox/: .gitignore  .verox_biometric_keychain  .verox_biometric_secret  Cargo.toml  build.rs  install_native_host.sh  native_host_manifest.json
verox-extension/: .gitignore  EXTENSION_README.md  index.html  manifest.json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
verox-extension/public/: background.js  manifest.json
verox-extension/public/wasm/: wallet.js
verox-extension/src/: App.css  App.tsx  extension.css  index.css
verox-extension/src/components/: Button.tsx  SlideToPay.tsx  WalletDashboard.tsx  WalletSetup.tsx
verox-extension/src/components/ui/: animated-shiny-text.tsx  badge.tsx  blur-fade.tsx  dot-pattern.tsx  separator.tsx
verox-extension/src/extension/: background.ts  content.ts  types.d.ts  wasm.ts
verox-extension/src/extension/popup/: index.html  popup.tsx  webauthn.ts
verox-extension/src/services/: biometric.ts  etherscan.ts  native.ts  price.ts  wallet.ts
verox-extension/src/types/: env.d.ts
verox/src/: biometric.rs  cli.rs  crypto.rs  lib.rs  main.rs  native_host.rs  touch_id_bridge.m  types.rs  utils.rs  wallet.rs  windows_hello.rs
