[package]
name = "verox"
version = "0.1.0"
edition = "2021"  

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
ethers = "2"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
base64 = "0.21"
hex = "0.4"
rpassword = "7.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-foundation = "0.10"
security-framework = "3.1" 
cocoa = "0.25"
libc = "0.2"

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1.0"

