[package]
name = "verox"
version = "0.1.0"
edition = "2021"  

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "verox"
path = "src/main.rs"

[[bin]]
name = "verox-native-host"
path = "src/native_host.rs"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
ethers = "2"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
base64 = "0.21"
hex = "0.4"
rpassword = "7.4.0"
webauthn-authenticator-rs = "0.5"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-foundation = "0.10"
security-framework = "3.1" 
cocoa = "0.25"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wincred", "dpapi", "winbase"] }
windows = { version = "0.56", features = ["Win32_Security_Credentials", "Win32_Foundation", "Win32_System_Memory"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1.0"

[features]
default = ["console_error_panic_hook"]

